# dec25_intern_B_security

./: .cursorrules  .gitignore  README.md  agent_worker.md  package.json  pyproject.toml
agent-backend/: database.py  models.py
agent-backend/tests/: test_worker.py
app/: layout.tsx
apps/api/: main.py
apps/api/routers/: emails.py
apps/api/services/: risk.py
apps/web/components/landing/: landing-page.tsx
apps/worker/action/: main.py  requirements.txt
apps/worker/analyses/: main.py
apps/worker/intent/: graph.py  main.py  nodes.py  schemas.py
dashboard/: .env.example  middleware.ts  package.json
dashboard-backend/: .env.example  __init__.py  database.py  gmail_service.py  main.py  migrate.py  models.py  pyproject.toml
dashboard-backend/tests/: conftest.py  test_database.py  test_gmail_service.py  test_main.py  test_organizations.py  test_users.py
dashboard/components/: dashboard-layout.tsx  emails-page.tsx  luffy-chatbot.tsx  overview-page.tsx  settings-page.tsx  users-page.tsx
dashboard/components/luffy/: index.ts
dashboard/lib/: api.ts
dashboard/styles/: chatbot.css
decision-agent/: Dockerfile  main.py  requirements.txt
email-ingest-agent/: Dockerfile  main.py
