[project]
name = "agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "google-auth>=2.45.0",
    "google-auth-oauthlib>=1.2.2",
    "google-api-python-client>=2.187.0",
    "redis>=5.0.0",
]

[tool.pyright]
venv = '.venv'
venvPath = '.'
